--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.2);
 }
 .buttons {
   margin: 10px;
@@ -77,10 +77,11 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  border-radius: 15px;
 }
 .cardPaintings {
   width: 100%;
-  height: 50%;
+  height: 58%;
   margin: 0;
 }
 
@@ -110,10 +111,11 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  border-radius: 15px;
 }
 .cardActionFigure {
   width: 100%;
-  height: 50%;
+  height: 58%;
   margin: 0;
 }
 
