--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 #imagePaintingList {
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 15px 15px 0px 0px;
 }
 
 #titlePaintingList {
@@ -123,7 +123,7 @@ body {
 #imgActionFigure {
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 15px 15px 0px 0px;
 }
 #titleActionFigure {
   font-size: 20px;
